--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,9 +5,13 @@
 */
 
 /* =================================================================
-       TAILWIND IMPORTS
+        MPORTS
    ================================================================= */
 
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Gloock&display=swap');
+
+/* Tailwind */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
