refactor: Create shared classes for repeated elments
This commit includes creation of utility classes for <body>, <a>, and <span>
The link to src/css/styles.css was removed.

This cleans up the increasingly cluttered HTML and makes sure there's no need to copy-paste long styles, instead just using shortened and concise utility classes.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,7 +5,7 @@
 */
 
 /* =================================================================
-        MPORTS
+        # IMPORTS
    ================================================================= */
 
 /* Google Fonts */
@@ -15,3 +15,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* ===============================================================
+        # SHARED CLASSES
+   ================================================================= */
+
+/* Body */
+.body {
+        @apply overflow-x-hidden bg-background min-h-screen flex flex-col justify-center items-center font-body text-textPrimary;
+}
+
+/* Red links */
+.link {
+        @apply text-accent hover:underline hover:underline-offset-4;
+}
+
+/* Buttons */
+.btn {
+        @apply bg-foreground px-5 py-2 rounded-round hover:bg-accent transition transform hover:scale-[1.02];
+}
+
+/* Span text */
+.span {
+        @apply text-accent group-hover:text-textPrimary transition;
+}
