refactor(css): Create shared classes for form components
Abstracted repeating utility classes into dedicated CSS classes to improve readability and maintainability.

The following shared classes were created:
- '.header' for the header elements.
- `.label` for all form `<label>` elements.
- `.textfield` for all `<input type="text">` elements.
- `.dropdown` for all `<select>` elements.
- `.section-heading` for all `h2` elements.
- `.sub-heading` for `h3` and `h4` elements.

This change reduces repeated code in the HTML and centralizes styling logic. Also cleans up the HTML greatly.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,3 +40,28 @@
 .span {
         @apply text-accent group-hover:text-textPrimary transition;
 }
+
+/* Header/topbar */
+.header {
+        @apply bg-foreground absolute top-0 w-full h-14 flex justify-between items-center px-5 sm:h-16 lg:px-10;
+}
+
+/* Header text */
+.header p {
+        @apply text-xs text-textSecondary mt-1 sm:text-base sm:mt-2;
+}
+
+/* Form labels */
+.label {
+        @apply flex flex-col text-xs text-start text-textSecondary;
+}
+
+/* Form textfields */
+.textfield {
+        @apply bg-foreground text-base text-textPrimary placeholder:text-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02];
+}
+
+/* Form dropdowns */
+.dropdown {
+        @apply bg-foreground text-base py-[0.95rem] px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02];
+}
