refactor: Create more shared classes for form elements
This commit includes the creation of shared (or just nested selectors) of the follwing:
- <h2> as 'main h2' for major sections
- <h3> as 'main h3' for subsections
- <h4> as 'main h4' for parts within subsections
The commit also comments so I don't forget.

The use of descendants is better, imo, in this case because I've already mapped out which headings to use where, and it keeps the HTML squeaky clean.
Note: upload mockup images to README, or provide Figma link

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,3 +65,18 @@
 .dropdown {
         @apply bg-foreground text-base py-[0.95rem] px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02];
 }
+
+/* Form heading for major sections (e.g. Basic, Attributes) */
+main h2 {
+        @apply font-heading text-4xl mb-7;
+}
+
+/* Form heading for subsections (e.g. Disciplines, Backgrounds) */
+main h3 {
+        @apply font-heading text-3xl;
+}
+
+/* Form heading for parts of subsections (e.g.Physcial/Mental/Social) */
+main h4 {
+        @apply font-heading text-2xl;
+}
