--- a/src/css/style.css
+++ b/src/css/style.css
@@ -126,5 +126,5 @@ main h4 {
 
 /* The dot itself */
 .dot {
-        @apply w-5 h-5 rounded-full border border-textSecondary bg-transparent transition duration-200 hover:border-textPrimary hover:scale-[1.12];
+        @apply w-5 h-5 rounded-full border border-textSecondary bg-transparent transition duration-200 hover:border-accent hover:scale-[1.12];
 }
