--- a/src/css/app.css
+++ b/src/css/app.css
@@ -126,9 +126,14 @@ main h4 {
   @apply flex justify-center gap-3;
 }
 
-/* The dot itself */
+/* Un-filled dot */
 .dot {
   @apply w-5 h-5 rounded-full border border-textSecondary bg-transparent transition duration-200 hover:border-accent hover:scale-[1.12];
+}
+
+/* FIlled-in dot */
+.dot.filled {
+  @apply border-textPrimary bg-textPrimary;
 }
 
 /**
