feat: create 'save as PDF' button
Also restyles the 'floating' buttons to match. This refers to the freebie point counter, freebie mode button, and the freebie reset button

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -44,7 +44,11 @@ main {
 
 /* Buttons (general) */
 .btn {
-  @apply bg-foreground px-5 py-2 rounded-round hover:bg-accent transition transform hover:scale-[1.02];
+  @apply bg-foreground w-fit px-5 py-2 rounded-round hover:bg-accent transition transform hover:scale-[1.02];
+}
+
+.btn-float {
+  @apply bg-textPrimary text-black w-fit px-5 py-2 rounded-round hover:bg-accent hover:text-textPrimary transition transform hover:scale-[1.02];
 }
 
 /* Span text */
